<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="title">Mifare Detection Tool</string>
    <string name="app_name">Yocaina</string>
    
	<string name="currentStatus">Current Status: </string>
	<string name="scanTag"> Scan a Tag </string>

    <string name="scan">Scan</string>
    <string name="decode">Decode</string>
    <string name="dump">Dump</string>
    <string name="dumpToFile">Dump to File</string>
    <string name="clone">Clone</string>
    <string name="repository">Repository</string>
    <string name="other">Other</string>
    
    <string name="neardevice">Put your card near device.</string>
    <string name="developing">Developing ..</string>
    <string name="notImplemented">Not implemented yet.</string>
    
    
    <string name="online">Online</string>
    <string name="reading">Reading the Tag..</string>
    <string name="selectCard">Select card</string>
    <string name="tagRead">Tag read.</string>
    <string name="errorReading">Error reading card.</string>
    
    <string name="authFailed">Authentication Failed on Block</string>
    <string name="blockFailed">Failed reading Block</string>
    
    <string name="readyScan">Ready for Scan</string>
    <string name="noCards">No cards in your device\n\n To add new card create a new file in path:</string>
    
    
    
    <string name="section">Section</string>
    <string name="block">BLOCK</string>
    
    <string name="download">Download</string>
    <string name="cardsAvailable">Cards Available:</string>
    
    <string name="dumped">Card dumped at </string>
    <string name="dumped_error">Can\'t make a dump from card</string>
    
     <string name="and_try_again">Try again later.</string>
  
     <string name="ok">Ok</string>
  
</resources>
