<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:text="@string/title"
  android:background="@drawable/background">
  
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
     android:scrollbars="vertical" 
     android:layout_height="fill_parent" 
     android:layout_width="fill_parent">
    
  <TableLayout 
		android:id="@+id/tblGeneral" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content">

       
		<LinearLayout
		    android:id="@+id/tableStatus"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" >

			<TextView 
				android:id="@+id/status_label"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:text="@string/currentStatus" />
			<TextView 
				android:id="@+id/status_data" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:text="@string/scanTag" />
			
  
		</LinearLayout>

		<View
		    android:id="@+id/viewScan"
		    style="@style/table_header"
		    android:layout_width="match_parent"
		    android:layout_height="55px"
		    android:background="#000000" />

		
	</TableLayout>
	 
</ScrollView>
  
	
</RelativeLayout>