<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background">
    
    <LinearLayout 
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="2"
	    android:gravity="center"
    >
    
	    <TextView  
			android:id="@+id/txBienvenida"
	    	android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content" 
	    	android:gravity="center"
	    	android:text="@string/app_name"
	    	android:textStyle="bold"
	    	android:textSize="25sp"
	    	android:textColor="#FFFFFF"
	    />
	    
	    <TextView  
			android:id="@+id/txPerfil"
	    	android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content" 
	    	android:gravity="center"
	    	android:text="@string/title"
	    	android:textStyle="bold"
	    	android:textColor="#FFFFFF"
	    />
    
    </LinearLayout>
    
    <TableLayout 
	    xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
	>
		
		<TableRow
			android:layout_weight="1"
			android:gravity="center"
			android:paddingLeft="20px"
			android:paddingRight="20px"
			android:paddingBottom = "10px"
		>
			<LinearLayout 
			    xmlns:android="http://schemas.android.com/apk/res/android"
			    android:orientation="vertical"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:layout_weight="1"
			    android:gravity="center"
			    android:paddingRight="20px"
		   	>
			   	<Button
			   	    android:id="@+id/btn_scan"
			    	android:layout_width="wrap_content" 
			    	android:layout_height="wrap_content" 
			    	android:layout_weight="1"
			    	android:background="@drawable/scan" 
			    />
			    
			    <TextView  
				  	android:layout_width="fill_parent" 
				  	android:layout_height="wrap_content" 
				  	android:gravity="center"
				  	android:textStyle="bold"
				  	android:textColor="#FFFFFF"
				  	android:text="@string/scan"
			  	/>
		    </LinearLayout>
		    
		    <LinearLayout 
			    xmlns:android="http://schemas.android.com/apk/res/android"
			    android:orientation="vertical"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:layout_weight="1"
			    android:gravity="center"
			    android:paddingLeft="20px"
		   	>
			   	
			    <Button
			        android:id="@+id/btn_decode"
			    	android:layout_width="wrap_content" 
			    	android:layout_height="wrap_content" 
			    	android:layout_weight="1"
			    	android:background="@drawable/decode" 
		    	/>
			    
			    <TextView  
				  	android:layout_width="fill_parent" 
				  	android:layout_height="wrap_content" 
				  	android:gravity="center"
				  	android:textStyle="bold"
				  	android:textColor="#FFFFFF"
				  	android:text="@string/decode"
			  	/>
		    </LinearLayout>
		    
		    
 		</TableRow>
 		
 		<TableRow
			android:layout_weight="1"
			android:gravity="center"
			android:paddingLeft="20px"
			android:paddingRight="20px"
			android:paddingTop = "20px"
			android:paddingBottom = "10px"
		>
		
			<LinearLayout 
			    xmlns:android="http://schemas.android.com/apk/res/android"
			    android:orientation="vertical"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:layout_weight="1"
			    android:gravity="center"
			    android:paddingRight="20px"
		   	>
			   	<Button
			   	    android:id="@+id/btn_dump"
			    	android:layout_width="wrap_content" 
			    	android:layout_height="wrap_content" 
			    	android:layout_weight="1"
			    	android:background="@drawable/dump" 
			    	android:padding="20px"
		    	/>
			    
			    <TextView  
				  	android:layout_width="fill_parent" 
				  	android:layout_height="wrap_content" 
				  	android:gravity="center"
				  	android:textStyle="bold"
				  	android:textColor="#FFFFFF"
				  	android:text="@string/dump"
			  	/>
		    </LinearLayout>
		    
		    <LinearLayout 
			    xmlns:android="http://schemas.android.com/apk/res/android"
			    android:orientation="vertical"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:layout_weight="1"
			    android:gravity="center"
			    android:paddingLeft="20px"
		   	>
		   	
			   	<Button
			   	    android:id="@+id/btn_clone"
			    	android:layout_width="wrap_content" 
			    	android:layout_height="wrap_content" 
			    	android:layout_weight="1"
			    	android:background="@drawable/clone" 
			    />
			   				    
			    <TextView  
				  	android:layout_width="fill_parent" 
				  	android:layout_height="wrap_content" 
				  	android:gravity="center"
				  	android:textStyle="bold"
				  	android:textColor="#FFFFFF"
				  	android:text="@string/clone"
			  	/>
		    </LinearLayout>
		    
 		</TableRow>
 		
 		<TableRow
			android:layout_weight="1"
			android:gravity="center"
			android:paddingLeft="20px"
			android:paddingRight="20px"
			android:paddingBottom = "10px"
		>
			<LinearLayout 
			    xmlns:android="http://schemas.android.com/apk/res/android"
			    android:orientation="vertical"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:layout_weight="1"
			    android:gravity="center"
			    android:paddingRight="20px"
		   	>
			   	<Button
			   	    android:id="@+id/btn_repository"
			    	android:layout_width="wrap_content" 
			    	android:layout_height="wrap_content" 
			    	android:layout_weight="1"
			    	android:background="@drawable/repo" 
			    />
			    
			    <TextView  
				  	android:layout_width="fill_parent" 
				  	android:layout_height="wrap_content" 
				  	android:gravity="center"
				  	android:textStyle="bold"
				  	android:textColor="#FFFFFF"
				  	android:text="@string/repository"
			  	/>
		    </LinearLayout>
		    
		    <LinearLayout 
			    xmlns:android="http://schemas.android.com/apk/res/android"
			    android:orientation="vertical"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:layout_weight="1"
			    android:gravity="center"
			    android:paddingLeft="20px"
		   	>
			   	
			    <Button
			        android:id="@+id/btn_other"
			    	android:layout_width="wrap_content" 
			    	android:layout_height="wrap_content" 
			    	android:layout_weight="1"
			    	android:background="@drawable/other" 
		    	/>
			    
			    <TextView  
				  	android:layout_width="fill_parent" 
				  	android:layout_height="wrap_content" 
				  	android:gravity="center"
				  	android:textStyle="bold"
				  	android:textColor="#FFFFFF"
				  	android:text="Other"
			  	/>
		    </LinearLayout>
		    
		    
 		</TableRow>
	
	</TableLayout>
    
    
    <LinearLayout
		    android:id="@+id/tableStatus"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_below="@+id/LinearLayoutButtons" 
		    android:gravity="center">

		    <TextView
		        android:id="@+id/status_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/currentStatus"
		        android:gravity="center" />

		    <TextView
		        android:id="@+id/status_data"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/scanTag"
		        android:gravity="center" />
		</LinearLayout>
    
</LinearLayout>